Fix ACE document editor cutting off long lines of code
Closes COUCHDB-2454

--- a/app/addons/documents/assets/less/documents.less
+++ b/app/addons/documents/assets/less/documents.less
@@ -100,9 +100,13 @@ button.beautify {
 }
 
 #editor-container {
-  width: 1316px;
   height: 688px;
+  width: 100%;
   font-size: 16px;
+}
+
+.editor-content-page {
+  padding-right: 20px;
 }
 
 button.string-edit {
